--- a/QPest/ResultsInfoTableViewCell.xib
+++ b/QPest/ResultsInfoTableViewCell.xib
@@ -3,18 +3,54 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="resultsInfo" id="KGk-i7-Jjw" customClass="ResultsInfoTableViewCell" customModule="QPest" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+            <rect key="frame" x="0.0" y="0.0" width="384" height="70"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <frame key="frameInset" width="320" height="43"/>
+                <frame key="frameInset" width="384" height="69"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iSl-u9-wR1">
+                        <constraints>
+                            <constraint firstAttribute="width" constant="38" id="yo7-dg-2VV"/>
+                            <constraint firstAttribute="height" constant="38" id="z8p-RI-jzy"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MPG-jz-oqE">
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="YnV-EM-pG9"/>
+                            <constraint firstAttribute="width" constant="302" id="gHe-zr-DUh"/>
+                        </constraints>
+                        <attributedString key="attributedText">
+                            <fragment content="Label">
+                                <attributes>
+                                    <font key="NSFont" size="17" name="Helvetica-Light"/>
+                                </attributes>
+                            </fragment>
+                        </attributedString>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
+                <constraints>
+                    <constraint firstAttribute="bottomMargin" secondItem="MPG-jz-oqE" secondAttribute="bottom" constant="16" id="8uA-7j-BWc"/>
+                    <constraint firstItem="MPG-jz-oqE" firstAttribute="leading" secondItem="iSl-u9-wR1" secondAttribute="trailing" constant="18" id="BEk-gb-2xT"/>
+                    <constraint firstItem="MPG-jz-oqE" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="16" id="P5i-vX-gy9"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="iSl-u9-wR1" secondAttribute="bottom" constant="8" id="k45-30-IQ0"/>
+                    <constraint firstItem="MPG-jz-oqE" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="nck-44-kZB"/>
+                    <constraint firstItem="iSl-u9-wR1" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="xcE-I0-9ZE"/>
+                    <constraint firstItem="iSl-u9-wR1" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="7" id="y3o-8j-Avb"/>
+                </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="imageIcon" destination="iSl-u9-wR1" id="tfk-PR-Bpm"/>
+                <outlet property="label" destination="MPG-jz-oqE" id="L0C-FT-LNN"/>
+            </connections>
         </tableViewCell>
     </objects>
 </document>
