--- a/ResultsQuantityTableViewCell.xib
+++ b/ResultsQuantityTableViewCell.xib
@@ -3,18 +3,65 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="resultsQuantity" id="KGk-i7-Jjw" customClass="ResultsQuantityTableViewCell" customModule="QPest" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="resultsQuantity" rowHeight="206" id="KGk-i7-Jjw" customClass="ResultsQuantityTableViewCell" customModule="QPest" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="459" height="206"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <frame key="frameInset" width="320" height="43"/>
+                <frame key="frameInset" width="459" height="205.5"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U18-ji-tWW">
+                        <attributedString key="attributedText">
+                            <fragment content="Informe, se possível, a quantidade de pragas encontradas">
+                                <attributes>
+                                    <color key="NSColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                    <font key="NSFont" size="20" name="Helvetica-Light"/>
+                                    <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                </attributes>
+                            </fragment>
+                        </attributedString>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Quantidade" textAlignment="natural" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SWe-em-N2C" customClass="MadokaTextField" customModule="TextFieldEffects">
+                        <constraints>
+                            <constraint firstAttribute="height" constant="66" id="KyB-gl-ptf"/>
+                            <constraint firstAttribute="width" constant="359" id="kzX-BA-o2L"/>
+                        </constraints>
+                        <color key="textColor" red="0.66666666669999997" green="0.66666666669999997" blue="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="20"/>
+                        <textInputTraits key="textInputTraits"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="color" keyPath="placeholderColor">
+                                <color key="value" red="0.66666666669999997" green="0.66666666669999997" blue="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                <color key="value" red="0.83529411760000005" green="0.31372549020000001" blue="0.2784313725" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </textField>
+                </subviews>
+                <constraints>
+                    <constraint firstAttribute="trailingMargin" secondItem="SWe-em-N2C" secondAttribute="trailing" constant="42" id="BhS-gY-hou"/>
+                    <constraint firstItem="SWe-em-N2C" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="95" id="DgN-zN-bCI"/>
+                    <constraint firstItem="SWe-em-N2C" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="42" id="GPc-jj-0BQ"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="SWe-em-N2C" secondAttribute="bottom" constant="28.5" id="KAC-AF-kn5"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="U18-ji-tWW" secondAttribute="trailing" constant="54" id="Xue-Oa-YDW"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="U18-ji-tWW" secondAttribute="bottom" constant="102.5" id="rFm-mh-LYa"/>
+                    <constraint firstItem="U18-ji-tWW" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="7" id="z7t-Sz-am9"/>
+                    <constraint firstItem="U18-ji-tWW" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="54" id="zK0-WN-Ps4"/>
+                </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="info" destination="U18-ji-tWW" id="sX3-1l-zxK"/>
+                <outlet property="quantityTextField" destination="SWe-em-N2C" id="mly-eT-y9x"/>
+            </connections>
+            <point key="canvasLocation" x="103.5" y="128"/>
         </tableViewCell>
     </objects>
 </document>
