--- a/QPest/IdentificationStoryboard.storyboard
+++ b/QPest/IdentificationStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Uyx-m6-VoT">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="YSI-FL-mRr">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
@@ -540,7 +540,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="perc1" translatesAutoresizingMaskIntoConstraints="NO" id="koa-uP-gjn">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="koa-uP-gjn">
                                 <constraints>
                                     <constraint firstAttribute="width" constant="375" id="YIn-S4-d5S"/>
                                     <constraint firstAttribute="height" constant="305" id="bHJ-VT-cIT"/>
@@ -553,6 +553,7 @@
                                 </constraints>
                                 <state key="normal" backgroundImage="exitCameraButton"/>
                                 <connections>
+                                    <action selector="didClickExit:" destination="EqW-7y-x9T" eventType="touchUpInside" id="jHt-25-Uq6"/>
                                     <segue destination="v0E-MX-ex7" kind="unwind" unwindAction="unwindToVCWithSegue:" id="YIy-56-mg1"/>
                                 </connections>
                             </button>
@@ -630,8 +631,22 @@
                     <view key="view" contentMode="scaleToFill" id="mdT-Vo-Agr">
                         <rect key="frame" x="0.0" y="64" width="384" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="uBh-6g-TeS">
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="uBh-6g-TeS" secondAttribute="trailing" id="0fL-qi-PBa"/>
+                            <constraint firstItem="uBh-6g-TeS" firstAttribute="top" secondItem="sNg-WK-gSt" secondAttribute="bottom" id="276-d1-U11"/>
+                            <constraint firstItem="OWd-rh-PdS" firstAttribute="top" secondItem="uBh-6g-TeS" secondAttribute="bottom" id="ltg-bT-iSk"/>
+                            <constraint firstItem="uBh-6g-TeS" firstAttribute="leading" secondItem="mdT-Vo-Agr" secondAttribute="leading" id="tlJ-nw-LG2"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="uBh-6g-TeS" id="ha0-PN-uLO"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ow2-jK-8F9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -921,6 +936,5 @@
         <image name="cameraButton" width="114" height="114"/>
         <image name="exitCameraButton" width="55" height="54"/>
         <image name="flashButtonAuto" width="54" height="54"/>
-        <image name="perc1" width="3024" height="3024"/>
     </resources>
 </document>
